--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-asgiref==3.2.3
-Django==3.0.3
-Pillow==7.0.0
+asgiref==3.7.2
+Django==5.0
+Pillow==10.1.0
 pytz==2019.3
-sqlparse==0.3.0
-gunicorn==20.0.4
+sqlparse==0.4.4
+typing_extensions==4.9.0
